# cuda-pheromone-aggregation

./: .gitignore  CMakeLists.txt  README.md  agents_log.json  clusters.py  main.cu  optimize.py  rerun_result.py  runner.sh
headers/: agent_update.h  gaussian_odour.h  init_env.h  logging.h  numeric_functions.h  parameters.h  update_matrices.h
map_elites/: common.py  cvt.py
map_elites/plot/: plot_2d_map.py
visualization/: gaussian_video_maker.py  grid_video_maker.py  video_maker.py
